# scPII

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
docs/notebooks/: small_simulated_example.ipynb
scPII/: scPRS.py
src/scPII/: __init__.py  core.py  scPII.py  utils.py
tests/: __init__.py  test_scPII.py
