[build-system]
requires = ["setuptools >= 77.0.3",
        "numpy",
        "pandas",
        "scipy",
        "networkx",
        "scikit-learn",
        "joblib",
        "matplotlib",
        "tqdm",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "scPII"
version = "0.0.1"
authors = [
  { name="Shreyan Gupta, TAMU", email="xenon8778@tamu.edu" },
]
description = "A Python package for perturbation response scanning on gene regulatory networks."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/xenon8778/scPII"
Issues = "https://github.com/xenon8778/scPRS/issues"